[package]
name = "voprf-poc-rs"
version = "0.0.1"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "2.0.0"
sha2 = "0.8.0"
rand = "0.7.2"
hmac = "0.7.1"
rust-crypto = "0.2.36"
digest = "0.8.1"
